@@ -1,3 +1,8 @@
+2006-02-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiff2pdf.c: Fixed support for non-YCbCr encoded JPEG
+	compressed TIFF files, per submission from Dan Cobra. 
+
 2006-02-07  Andrey Kiselev  <dron@remotesensing.org>
 
 	* libtiff/{tif_dirread.c, tif_packbits.c, tif_win32.c}: Properly
